<resources>
    <string name="app_name">Cele_n_Baholo_POE</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="items">Items</string>
    <string name="achievements">Achievements</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="desired_number_of_items">Desired number of items</string>
    <string name="add">Add</string>
    <string name="Helpful_cookie_category">This is where you enter a category for the items you want to collect.</string>
    <string name="category_name">Category Name</string>
    <string name="category">category</string>
    <string name="acquisition_date">Acquisition Date</string>
    <string name="add_photo">Add Photo</string>
    <string name="rc_category">Category:</string>
    <string name="rc_lbl_description">Description</string>
    <string name="rc_lbl_desired_number">Desired number:</string>
    <string name="rc_lbl_collected">Collected:</string>
    <string name="id">ID</string>
    <string name="update_item">Update Item</string>
    <string name="update">Update</string>
    <string name="achiever_achieved_your_collection_goal">Achiever: Achieved your collection goal</string>
</resources>