<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/rc_container_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/lbl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9C9C9C"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rc_category"
        android:textSize="20sp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9C9C9C"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/lbl_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rc_lbl_description"
        android:textSize="20sp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9C9C9C"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/lbl_desired_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rc_lbl_desired_number"
        android:textSize="20sp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9C9C9C"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/lbl_collected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rc_lbl_collected"
        android:textSize="20sp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="#9C9C9C"
        />
</LinearLayout>




</LinearLayout>