<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- This is the category button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:id="@+id/btnCategoryHome"
                android:textSize="14sp"
                android:background="@color/Lapis_Lazuli"
                />
            <!-- This is the items button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/items"
                android:id="@+id/btnItemHome"
                android:textSize="14sp"
                android:background="@color/Lapis_Lazuli"
                />
            <!-- This is the Achievements button -->
            <Button
                android:id="@+id/btnAchievementsHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Lapis_Lazuli"
                android:layout_marginLeft="7dp"

                android:text="@string/achievements"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/BtnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="19sp" />
</LinearLayout>